update messages to clarify in import table, fixed styling for import page, fixed misaligned icons

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1665,10 +1665,6 @@ ul#urlList {
 #post-publication {
 	padding-bottom: 45px;
 	
-	.content-header {
-		border-bottom: none;
-	}
-	
 	#publication-functions {
 		.btn-group {
 			margin-bottom: 20px;
@@ -1691,6 +1687,10 @@ ul#urlList {
 				margin-right: 5px;
 			}
 		}
+	}
+
+	fieldset {
+		margin: 0;
 	}
 }
 
